fix: background scroll on Safari mobile

--- a/src/app.css
+++ b/src/app.css
@@ -55,14 +55,26 @@ html {
 
 body {
 	background-color: #221335;
-	background-image: url('/background.jpg');
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
 	touch-action: pan-y;
 	/* Fix for iOS Safari viewport height */
 	min-height: 100%;
+	position: relative;
+}
+
+/* Background fix using pseudo-element - Safari Mobile compatible (otherwise it scrolls) */
+body::before {
+	content: '';
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #221335;
+	background-image: url('/background.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	z-index: -1;
 }
 
 /* Use dvh (dynamic viewport height) for iOS support */
